bad/assign_arr_elem_array_void.example_compiler_output
ERROR
[1mbad/assign_arr_elem_array_void.lat:5:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `void`[m
	(new int[][3])[1] = vfunc();
	                  [1;32m^[m
